--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1"
   },
